Update packaging scripts